--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -58,7 +58,7 @@ jobs:
       versioningScheme: byPrereleaseNumber
       majorVersion: $(majorVersion)
       minorVersion: $(minorVersion)
-      minorVersion: $(patchVersion)
+      patchVersion: $(patchVersion)
       packDestination: '$(Build.ArtifactStagingDirectory)/'
       includeSymbols: true
 
