--- a/steward-ci-analyzer-documentation.yml
+++ b/steward-ci-analyzer-documentation.yml
@@ -5,7 +5,8 @@
 # - Check that StewardApi project complies with linters. Warnings are treated as errors.
 # - Runs StewardApi unit tests and produces a summary
 
-trigger: none
+trigger:
+- main
 
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
 
