--- a/packages/StewardClient-Cypress/package.json
+++ b/packages/StewardClient-Cypress/package.json
@@ -37,6 +37,7 @@
   },
   "private": true,
   "dependencies": {
+    "@cypress/grep": "^3.1.5",
     "@types/node": "^20.4.3"
   },
   "devDependencies": {
