I think working end to end, need Luke's help to validate

--- a/packages/StewardApi/StewardApi/appsettings.json
+++ b/packages/StewardApi/StewardApi/appsettings.json
@@ -62,6 +62,14 @@
     "SecretName": "web-client"
   },
   "StewardEnvironment": "prod",
+  "ForteEnvironment": {
+    "PlayFab": {
+      "Dev": {
+        "TitleId": "playfab-forte-dev-title",
+        "Key": "playfab-forte-dev-key"
+      }
+    }
+  },
   "WoodstockEnvironment": {
     "Uri": "https://Woodstock-LiveOpsTest.dev.Services.forzamotorsport.net/Services/o.xtsw",
     "Sandbox": "RETAIL",
