--- a/packages/StewardApi/StewardApi/appsettings.local.json
+++ b/packages/StewardApi/StewardApi/appsettings.local.json
@@ -62,6 +62,14 @@
     "SecretName": "web-client"
   },
   "StewardEnvironment": "dev",
+  "ForteEnvironment": {
+    "PlayFab": {
+      "Dev": {
+        "TitleId": "playfab-forte-dev-title",
+        "Key": "playfab-forte-dev-key"
+      }
+    }
+  },
   "WoodstockEnvironment": {
     "Uri": "https://woodstock-final.dev.services.forzamotorsport.net/Services/o.xtsw",
     "Sandbox": "RETAIL",
