--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -19,11 +19,11 @@
     "build:check:changelog-is-modified": "C:\\Windows\\system32\\bash.exe ./scripts/changelog-is-modified-or-fail.sh",
     "build:check:ado:changelog-is-modified": "bash ./scripts/changelog-is-modified-or-fail.sh",
     "build": "yarn run build:dev",
-    "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --crossOrigin=anonymous && yarn run build:configMoveToBuild",
-    "build:dev-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev-api --crossOrigin=anonymous && yarn run build:configMoveToBuild",
+    "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --cross-origin=anonymous && yarn run build:configMoveToBuild",
+    "build:dev-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev-api --cross-origin=anonymous && yarn run build:configMoveToBuild",
     "build:configMoveToBuild": "cp web.config dist/",
-    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
-    "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
+    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
+    "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
     "test:prepare": "find src -name '*.scss' -print0 | xargs -0 -I {} bash -c 'cp -f empty.not-scss {}'",
     "test:prepare:add": "git add * && git reset *.scss",
     "test:prepare:reset": "git restore *.scss",
@@ -55,13 +55,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.3.0",
-    "@angular/cdk": "^13.1.1",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
     "@angular/core": "^14.3.0",
     "@angular/forms": "^14.3.0",
     "@angular/localize": "^14.3.0",
-    "@angular/material": "^13.1.1",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.3.0",
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/pwa": "^13.1.2",
@@ -100,7 +100,7 @@
     "ngx-material-luxon": "^1.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-pipes": "^3.2.2",
-    "ngx-ui-tour-md-menu": "8.0",
+    "ngx-ui-tour-md-menu": "9.3.1",
     "rxjs": "^7.5.1",
     "ts-essentials": "^9.3.0",
     "tslib": "^2.3.1",
