--- a/packages/StewardClient/angular.json
+++ b/packages/StewardClient/angular.json
@@ -59,7 +59,7 @@
                   "with": "src/environments/environment.dev.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": false,
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
