--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "auth": "vsts-npm-auth -config .npmrc",
     "auth:force": "vsts-npm-auth -config .npmrc -F",
+    "update:browserslists": "npx browserslist --update-db",
     "start": "yarn run start:dev",
     "start:local": "ng serve",
     "start:dev": "ng serve --configuration=dev-api",
@@ -96,9 +97,9 @@
     "luxon": "^2.5.2",
     "luxon-angular": "^5.0.0",
     "msal": "^1.4.15",
-    "ng-table-virtual-scroll": "^1.3.8",
+    "ng-table-virtual-scroll": "1.5.x",
     "ngx-material-luxon": "^1.1.1",
-    "ngx-material-timepicker": "^5.5.3",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-pipes": "^3.2.2",
     "ngx-ui-tour-md-menu": "9.3.1",
     "rxjs": "^7.5.1",
@@ -157,7 +158,7 @@
     "replace-in-file": "^6.3.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
+    "typescript": "4.8.2",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1"
   },
