--- a/packages/StewardClient/angular.json
+++ b/packages/StewardClient/angular.json
@@ -17,25 +17,14 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "allowedCommonJsDependencies": [
-              "hammerjs",
-              "minimatch",
-              "lodash",
-              "json-bigint"
-            ],
+            "allowedCommonJsDependencies": ["hammerjs", "minimatch", "lodash", "json-bigint"],
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [
-              "src/assets",
-              "src/translations",
-              "src/manifest.json"
-            ],
-            "styles": [
-              "src/global.scss"
-            ],
+            "assets": ["src/assets", "src/translations", "src/manifest.json"],
+            "styles": ["src/global.scss"],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
@@ -210,15 +199,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/global.scss"
-            ],
+            "styles": ["src/global.scss"],
             "scripts": [],
             "sourceMap": false,
             "watch": true,
-            "assets": [
-              "src/assets"
-            ],
+            "assets": ["src/assets"],
             "codeCoverageExclude": [
               "/**/fake-api/**/*.ts",
               "/**/polyfills.ts",
@@ -233,13 +218,8 @@
         "tslint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
           }
         },
         "lint": {
@@ -248,10 +228,7 @@
             "eslintConfig": ".eslintrc.js",
             "fix": true,
             "cache": true,
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.component.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.component.html"]
           }
         }
       }
