--- a/packages/StewardClient/src/tsconfig.eslint.json
+++ b/packages/StewardClient/src/tsconfig.eslint.json
@@ -7,5 +7,5 @@
   },
   "files": ["main.ts", "polyfills.ts", "app/shared/interceptors/fake-api/fake-api.interceptor.ts"],
   "include": ["**/*.ts"],
-  "exclude": ["./test.ts", "**/*.mock.ts", "**/*.d.ts"]
+  "exclude": ["./test.ts", "**/*.d.ts"]
 }
