--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -5,14 +5,12 @@
     "auth": "vsts-npm-auth -config .npmrc",
     "auth:force": "vsts-npm-auth -config .npmrc -F",
     "update:browserslists": "npx browserslist --update-db",
-
     "start": "yarn run start:dev",
     "start:local": "ng serve",
     "start:dev": "ng serve --configuration=dev-api",
     "start:dev:optimized": "ng serve --configuration=dev-api-optimized",
     "start:prod": "ng serve --configuration=prod-api",
     "start:prod:optimized": "ng serve --configuration=prod-api-optimized",
-    
     "ng": "ng",
     "lint": "ng lint",
     "lint:fix": "yarn prettier:fix && yarn lint --fix",
@@ -25,11 +23,8 @@
     "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --cross-origin=anonymous && yarn run build:configMoveToBuild",
     "build:dev-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev-api --cross-origin=anonymous && yarn run build:configMoveToBuild",
     "build:configMoveToBuild": "cp web.config dist/",
-    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
-    "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
     "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
     "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
-    
     "test:prepare": "find src -name '*.scss' -print0 | xargs -0 -I {} bash -c 'cp -f empty.not-scss {}'",
     "test:prepare:add": "git add * && git reset *.scss",
     "test:prepare:reset": "git restore *.scss",
@@ -38,14 +33,12 @@
     "test:ff": "ng test --karma-config=src/karma-firefox.conf.js --source-map=true",
     "test:ado": "ng test --karma-config=src/karma-ado.conf.js --code-coverage --watch false",
     "test:ado:ncc": "ng test --karma-config=src/karma-ado.conf.js",
-    
     "_old-commands-below": "echo Try another command.",
-    "eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
+    "__eslint": "eslint -c ./.eslintrc.js --ext .ts,.html ./**/*.ts",
     "find:missing_no_errors_schema": "grep -rn -C 0 --include \\*.component.spec.ts -L \"\\[NO_ERRORS_SCHEMA\\]\" ./src/*",
     "changes-with-main": "git diff-tree --no-commit-id --name-status -r HEAD main",
     "zat": "C:\\Windows\\system32\\bash.exe -c \"cd app-local && zat serve\"",
     "debug-open:ff": "\"C:\\Program Files\\Firefox Developer Edition\\firefox.exe\" -start-debugger-server",
-    
     "start:open": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true && ng serve --configuration=dev-api",
     "open:navbar": "start https://forzasupport1570048282.zendesk.com/agent/apps/scrutineer-inventory-management-angular?zat=true",
     "open:ticket:fm7": "start https://forzasupport1570048282.zendesk.com/agent/tickets/60?zat=true",
@@ -53,7 +46,6 @@
     "open:ticket:fh4": "start https://forzasupport1570048282.zendesk.com/agent/tickets/58?zat=true",
     "open:ticket:fh4:bad": "start https://forzasupport1570048282.zendesk.com/agent/tickets/62?zat=true",
     "open:ticket:fh5": "start https://forzasupport1570048282.zendesk.com/agent/tickets/68?zat=true",
-    
     "_old-aliases-below": "echo Try another command.",
     "refreshVSToken": "yarn run auth:force",
     "fix": "yarn run lint:fix",
@@ -96,7 +88,7 @@
     "bignumber.js": "^9.0.2",
     "core-js": "^3.20.2",
     "cypress-real-events": "^1.8.1",
-    "eslint-plugin-rxjs": "^4.0.4",
+    "eslint-plugin-rxjs": "^5.0.3",
     "eventsource": "^1.1.1",
     "file-saver": "^2.0.5",
     "humanize-duration": "^3.27.1",
@@ -134,16 +126,16 @@
     "@types/jasmine": "3.3.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.9.0",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "6.4.1",
+    "@typescript-eslint/eslint-plugin-tslint": "6.4.1",
+    "@typescript-eslint/parser": "6.4.1",
     "codelyzer": "^6.0.2",
     "concurrently": "^7.0.0",
     "copyfiles": "^2.4.1",
     "cypress": "^9.2.0",
     "cypress-wait-until": "^1.7.2",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "8.22.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsdoc": "^46.4.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
