--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -85,11 +85,12 @@
     "@types/json-bigint": "^1.0.1",
     "@types/signalr": "^2.2.37",
     "angular-calendar": "^0.29.0",
-    "bignumber.js": "^9.0.2",
+    "bignumber.js": "^9.1.2",
     "core-js": "^3.20.2",
     "cypress-real-events": "^1.8.1",
     "eslint-plugin-rxjs": "^5.0.3",
     "eventsource": "^1.1.1",
+    "faker": "^6.6.6",
     "file-saver": "^2.0.5",
     "humanize-duration": "^3.27.1",
     "json-bigint": "^1.0.0",
