--- a/packages/StewardApi/StewardApi/appsettings.local.json
+++ b/packages/StewardApi/StewardApi/appsettings.local.json
@@ -112,7 +112,7 @@
   "PegasusCms": {
     "Environments": "dev,prod",
     "Titles": "steelhead,woodstock,sunrise",
-    "SteelheadDefault": "dev",
+    "SteelheadDefault": "prod",
     "WoodstockDefault": "prod",
     "SunriseDefault": "prod"
   },
