Fix prod build command

--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -23,8 +23,8 @@
     "build:dev": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev --cross-origin=anonymous && yarn run build:configMoveToBuild",
     "build:dev-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=dev-api --cross-origin=anonymous && yarn run build:configMoveToBuild",
     "build:configMoveToBuild": "cp web.config dist/",
-    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
-    "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --crossOrigin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
+    "build:prod": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=production --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
+    "build:prod-api": "node --max-old-space-size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=prod-api --cross-origin=anonymous --subresource-integrity=true && yarn run build:configMoveToBuild",
     "test:prepare": "find src -name '*.scss' -print0 | xargs -0 -I {} bash -c 'cp -f empty.not-scss {}'",
     "test:prepare:add": "git add * && git reset *.scss",
     "test:prepare:reset": "git restore *.scss",
