--- a/packages/StewardApi/StewardApi/appsettings.local.json
+++ b/packages/StewardApi/StewardApi/appsettings.local.json
@@ -5,7 +5,7 @@
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
     "ClientId": "cfe0ac3f-d0a7-4566-99f7-0c56b7a9f7d4",
     "ServicePrincipalId": "b0b594f7-36e2-4ee5-9df7-301635fe6034",
-    "ClientSecretKey": "aad-auth-client-secret"
+    // "ClientSecretKey": "aad-auth-client-secret"
   },
   "ApplicationInsights": {
     "InstrumentationKey": "18e41d53-e8c7-465e-808d-ec4b1f9e5812"
@@ -19,12 +19,12 @@
   },
   "AllowedHosts": "*",
   "KeyVaultUrl": "steward-keyvault-dev",
-  "KustoClientSecretName": "aad-kusto-client-secret",
-  "BlobConnectionSecretName": "blob-connection-string",
+  // "KustoClientSecretName": "aad-kusto-client-secret",
+  // "BlobConnectionSecretName": "blob-connection-string",
   "GroupGiftingPasswordSecretName": "lsp-group-gifting-password",
-  "CosmosTableSecretName": "table-storage-connection-string",
-  "CosmosSharedTableSecretName": "table-storage-connection-string",
-  "ObligationClientSecretName": "obligation-aad-client-secret",
+  // "CosmosTableSecretName": "table-storage-connection-string",
+  // "CosmosSharedTableSecretName": "table-storage-connection-string",
+  // "ObligationClientSecretName": "obligation-aad-client-secret",
   "KustoConfiguration": {
     "KeyVaultName": "steward-keyvault-dev",
     "ClientSecret": "",
@@ -59,14 +59,14 @@
   },
   "Sts": {
     "Url": "https://sts.services.forzamotorsport.net/UserToken",
-    "SecretName": "web-client"
+    // "SecretName": "web-client"
   },
   "StewardEnvironment": "dev",
   "ForteEnvironment": {
     "PlayFab": {
       "Dev": {
-        "TitleId": "playfab-forte-dev-title",
-        "Key": "playfab-forte-dev-key"
+        // "TitleId": "playfab-forte-dev-title",
+        // "Key": "playfab-forte-dev-key"
       }
     }
   },
@@ -78,12 +78,12 @@
     "TitleId": "2030093255",
     "PlayFab": {
       "Dev": {
-        "TitleId": "playfab-woodstock-dev-title",
-        "Key": "playfab-woodstock-dev-key"
+        // "TitleId": "playfab-woodstock-dev-title",
+        // "Key": "playfab-woodstock-dev-key"
       },
       "Prod": {
-        "TitleId": "playfab-woodstock-prod-title",
-        "Key": "playfab-woodstock-prod-key"
+        // "TitleId": "playfab-woodstock-prod-title",
+        // "Key": "playfab-woodstock-prod-key"
       }
     }
   },
@@ -105,7 +105,7 @@
     "Uri": "https://serverservices.fm7.forzamotorsport.net/ServerServices.FM7Release/o.xtsw",
     "Sandbox": "RETAIL",
     "CertificateKeyVaultName": "steward-keyvault-dev",
-    "CertificateSecretName": "fm7-lsp-client",
+    // "CertificateSecretName": "fm7-lsp-client",
     "ClientVersion": "1",
     "AdminXuid": "3"
   },
@@ -113,7 +113,7 @@
     "Uri": "https://serverservices.fh3.forzamotorsport.net/ServerServices.FH3Release/o.xtsw",
     "Sandbox": "RETAIL",
     "CertificateKeyVaultName": "steward-keyvault-dev",
-    "CertificateSecretName": "fh3-lsp-client",
+    // "CertificateSecretName": "fh3-lsp-client",
     "ClientVersion": "1",
     "AdminXuid": "2"
   },
